--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url('./background.jpg') bottom center;
+    background: url('~/Desktop/jmFiles/background.jpg') bottom center;
     background-size: cover;
   }
   
